--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
 </head>
 <body>
 
+    <!-- Бургер-меню -->
+    <nav class="navbar">
+        <div class="burger-menu" onclick="toggleMenu()">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+        </div>
+        <ul class="menu" id="menu">
+            <li><a href="#games">Games</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+
     <!-- Основной контент сайта -->
     <section id="games" class="section">
         <h1>Game Library</h1>
