--- a/index.html
+++ b/index.html
@@ -41,6 +41,20 @@
         </div>
     </section>
 
+    
+    <!-- Модальное окно с описанием игры -->
+    <div id="gameModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal()">&times;</span>
+            <h2 id="gameTitle">Game Title</h2>
+            <p id="gameDescription">Game description...</p>
+            <h3>System Requirements</h3>
+            <ul id="systemRequirements">
+                <!-- Системные требования будут вставлены сюда -->
+            </ul>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
